--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
     <canvas id="canvas" width=720 height=360></canvas>
     <script src="main.js"></script>
-    <script src="miloEngine.js"></script>
+    <script src="miloGameLib.js"></script>
 </body>
 
 </html>
