Set up mvp code outline

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <body>
-    <canvas id="canvas" width=720 height=360></canvas>
+    <div style="text-align:center;">
+        <canvas id="canvas" width=600 height=720></canvas>
+    </div>
     <script src="main.js"></script>
     <script src="miloGameLib.js"></script>
 </body>
