--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
+<body style="background-color: rgb(45, 44, 95);">
+    <title>Ant Hill</title>
     <div style="text-align:center;">
         <canvas id="canvas" width=600 height=720></canvas>
     </div>
