I may have messed something up while swapping it to my own branch, but I dont think i did. just merge carefully.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: rgb(20, 20, 20);">
 
-<body style="background-color: rgb(45, 44, 95);">
+<body style="background-color: rgb(20, 20, 20); margin-top: 10%;">
     <title>Ant Hill</title>
     <div style="text-align:center;">
         <canvas id="canvas" width=600 height=720></canvas>
