--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" style="background-color: rgb(20, 20, 20);">
 
-<body style="background-color: rgb(20, 20, 20); margin-top: 10%;">
+<head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Press Start 2P: 400'] 
+            }
+        });
+    </script>
+</head>
+
+<body>
     <title>Ant Hill</title>
-    <div style="text-align:center;">
+    <div style="text-align: center; background-color: rgb(45, 44, 95);">
         <canvas id="canvas" width=600 height=720></canvas>
     </div>
     <script src="main.js"></script>
